HelloUltraviolet/Fixtures/RejectedSource/Patterns/RecordPatternUnknownField/Expected.uv
//! Expected diagnostic metadata for the RecordPatternUnknownField rejected-source specimen.

expectedDiagnostic("", "rule.17.RecordPattern-UnknownField")
